# stereocam

./: .gitignore  Dockerfile  docker-compose.yml
src/camera_node/: CMakeLists.txt  package.xml
src/camera_node/config/: szocske.yaml  szocske_left.yaml  szocske_right.yaml
src/camera_node/launch/: szocske_launch.py
